--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,9 +1,20 @@
 // Home Content
 
 .home {
+  margin-top: 110px;
+  @media @phone {
+    margin: 0 2%;
+    width: 96%;
+  }
 
   .intro {
+    .topImgSection {
+      img {
+        max-width: 100%;
+        margin: 0 auto;
+      }
 
+    }
     h2 {
       padding: 15px;
     }
@@ -58,6 +69,10 @@
       }
 
       .btn {
+        .button(@btn-bg-color, 5px);
+        font-size: 1.5rem;
+        font-weight: bold;
+        display: inline;
       }
     }
 
@@ -73,3 +88,28 @@
     }
   }
 }// home
+
+header {
+  .flexRow();
+  justify-content: center;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  background: @wild-sand;
+  width: 100%;
+  height: 110px;
+  @media @phone {
+    position: static;
+    height: 80px;
+  }
+  .header-content {
+    .flexColumn();
+    align-content: center;
+    text-align: center;
+    max-width: 800px;
+    width: 100%;
+    padding: 2% 0 0 0;
+    @media @phone {
+    }
+  }
+}
