--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,21 @@
 // Navigation code here
+nav {
+    display: flex;
+    width: 70%;
+    justify-content: space-evenly;
+    margin-top: 2%;
+    @media @phone {
+        width: 80%;
+        justify-content: space-between;
+    }
+    a {
+    text-decoration: none;
+    color: @nav-font;
+    padding: 0 1%;
+    font-size: 1.5rem;
+    @media @phone {
+        white-space: nowrap;
+        font-size: 1.3rem;
+    }
+    }
+}
