--- a/css/index.css
+++ b/css/index.css
@@ -235,6 +235,17 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images .blast {
+    width: 95%;
+  }
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -251,8 +262,22 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    margin-top: 10px;
+    padding: 15px 5px;
+    display: flex;
+    flex-flow: column wrap;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    padding: 3% 0;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -275,9 +300,23 @@ footer {
   color: #22283A;
   transition: 1s;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    display: block;
+    text-align: center;
+    padding: 6% 0 4% 0;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    order: -1;
+    width: 100%;
+    margin: 0 auto;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
@@ -292,6 +331,8 @@ header {
   position: fixed;
   top: 0;
   background: #F6F6F6;
+  opacity: 0.9;
+  filter: alpha(opacity=90);
   width: 100%;
   height: 110px;
 }
